<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <!--        Constraint layout inside scrollview - elements are placed with constraints-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".QuizStartActivity"
        android:background="@color/white">

        <!--    Text to show the Amount won by the user at each stage-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAmt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/quesLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/won"
            android:background="@drawable/button_light_green"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:gravity="center"/>

        <!--   Layout to render the Question and Options A, B, C and D -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAmt"
            app:layout_constraintBottom_toTopOf="@id/btnQuit"
            android:orientation="vertical"
            android:id="@+id/quesLayout"
            android:paddingTop="75dp"
            android:paddingBottom="80dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            tools:ignore="NotSibling">

            <!-- TextView for displaying the Question -->

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_blue"
                android:gravity="center"
                android:text="@string/question_1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!--  RadioGroup to contain all answer options for Question -->

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rgOptions"
                android:background="@drawable/button_light_purple">

                <!--            Table layout is used to display each option in a separate row-->

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <!--                Row 1 : Option A-->
                    <TableRow>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rbOption1"
                            android:text="@string/option_1_a">
                        </RadioButton>
                    </TableRow>

                    <!--                Row 2 : Option B-->
                    <TableRow>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rbOption2"
                            android:text="@string/option_1_b">
                        </RadioButton>
                    </TableRow>

                    <!--                Row 3 : Option C-->
                    <TableRow>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rbOption3"
                            android:text="@string/option_1_c">
                        </RadioButton>
                    </TableRow>

                    <!--                Row 4 : Option D-->
                    <TableRow>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/rbOption4"
                            android:text="@string/option_1_d">
                        </RadioButton>
                    </TableRow>
                </TableLayout>
            </RadioGroup>

            <!--        Question and options end here-->

            <!--        TextView to submit the answer-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_purple"
                android:onClick="Submission"
                android:text="Confirm"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnQuit"
                android:layout_marginTop="50dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_orange"
                android:onClick="Submission"
                android:text="@string/quit_text"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
